@@ -1259,7 +1259,11 @@ which may actually result in an url rather than a filename."
 		    ))
 	  (setq dir (file-name-directory guess))))
     (let ((minibuffer-completing-file-name t)
-	  (completion-ignore-case read-file-name-completion-ignore-case))
+	  (completion-ignore-case read-file-name-completion-ignore-case)
+	  ;; because of `rfn-eshadow-update-overlay'.
+	  (file-name-handler-alist
+	   (cons (cons ffap-url-regexp 'url-file-handler)
+		 file-name-handler-alist)))
       (setq guess
 	    (completing-read
 	     prompt
